k8s-manifest/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  server-deployment
  namespace: default
  labels:
    app:  server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  server
    spec:
      containers:
      - name:  server
        image:  hxyro/modifier-server
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 500m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 80
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
